--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -183,6 +183,13 @@
 		<ul>	
 			<!-- BEGIN SELECTED LINK -->
 			<li class="">
+				<a href="<%= root_path %>" >
+					<%= fa_icon "home" %>
+					<span class="title">Home</span>
+				</a>
+			</li>
+			<!-- BEGIN SELECTED LINK -->
+			<li class="">
 				<a href="<%= cars_path %>" >
 					<%= fa_icon "truck" %>
 					<span class="title">Cars</span>
