--- a/app/views/car_models/index.html.haml
+++ b/app/views/car_models/index.html.haml
@@ -15,15 +15,13 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
-        %h3
+      .grid-title.no-border
+        %h4
           Car Models
+          = link_to 'Add', new_car_model_path, class: "btn btn-success btn-small"
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -32,8 +30,7 @@
               %th
               %th
               %th
-          %tbody
-            
+          %tbody  
             - @car_models.each do |car_model|
               %tr
                 %td= car_model.name
@@ -41,8 +38,6 @@
                 %td= link_to 'Show', car_model
                 %td= link_to 'Edit', edit_car_model_path(car_model)
                 %td= link_to 'Destroy', car_model, :method => :delete, :data => { :confirm => 'Are you sure?' }
-%br
 
 
 
-= link_to 'New Car model', new_car_model_path, class: "btn btn-success"
