--- a/app/views/device_models/index.html.haml
+++ b/app/views/device_models/index.html.haml
@@ -1,30 +1,54 @@
 
-= search_form_for @q, :class => "form-inline" do |f| 
-  = f.search_field :name_cont, :placeholder => "search with name" 
-  = f.submit "Search" ,:class => "btn btn-default"
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Search
+        
+      .grid-body.no-border
 
-%br
+        = search_form_for @q, :class => "form-inline" do |f| 
+          = f.search_field :name_cont, :placeholder => "search with name" 
+          = f.submit "Search" ,:class => "btn btn-default"
 
-= form_tag '', :method => :get do
-  = "Device Manufacturer"
-  = select_tag( :by_device_manufacturer, options_for_select(all_device_manufacturers, params[:by_device_manufacturer]), :include_blank => true)
-  = submit_tag 'Filter', :class => "btn btn-primary"
 
-%br
 
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Filter
+        
       .grid-body.no-border
-        %h3
+        = form_tag '', :method => :get do
+          .form-group
+            = "Device Manufacturer"
+          .form-group
+            = select_tag( :by_device_manufacturer, options_for_select(all_device_manufacturers, params[:by_device_manufacturer]), :include_blank => true)
+          .form-group
+            = submit_tag 'Filter', :class => "btn btn-primary"
+
+
+
+.row
+  .col-md-12
+    .grid.simple 
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
           Device models
+          = link_to 'Add', new_device_model_path, class: "btn btn-success btn-small"
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -46,4 +70,3 @@
                 %td= link_to 'Destroy', device_model, :method => :delete, :data => { :confirm => 'Are you sure?' }
 %br
 
-= link_to 'New Device model', new_device_model_path, class: "btn btn-success"
