--- a/app/views/work_schedules/index.html.haml
+++ b/app/views/work_schedules/index.html.haml
@@ -2,15 +2,15 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          &nbsp;
+          = link_to 'Add', new_work_schedule_path, class: "btn btn-success btn-small"
+
+        
       .grid-body.no-border
-        %h3
-          Work Schedules
         %table.table.no-more-tables
           %thead
             %tr
@@ -29,8 +29,3 @@
                 %td= link_to 'Edit', edit_work_schedule_path(work_schedule)
                 %td= link_to 'Destroy', work_schedule, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
-
-
-
-= link_to 'New Work schedule', new_work_schedule_path, class: "btn btn-success"
