--- a/app/views/alarms/index.html.haml
+++ b/app/views/alarms/index.html.haml
@@ -1,17 +1,14 @@
-
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
-        %h3
+      .grid-title.no-border
+        %h4
           Alarms
+          = link_to 'Add', new_alarm_path, class: "btn btn-success btn-small"
+      .grid-body.no-border 
         %table.table.no-more-tables
           %thead
             %tr
@@ -25,6 +22,5 @@
                 %td= alarm.name
                 %td= link_to 'Show', alarm
                 %td= link_to 'Destroy', alarm, :method => :delete, :data => { :confirm => 'Are you sure?' }
-%br
 
-= link_to 'New Alarm', new_alarm_path, class: "btn btn-success"
+
