--- a/app/views/car_manufacturers/index.html.haml
+++ b/app/views/car_manufacturers/index.html.haml
@@ -9,15 +9,14 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
-        %h3
+      .grid-title.no-border
+        %h4
           Car Manufacturers
+          = link_to 'Add', new_car_manufacturer_path, class: "btn btn-success btn-small"
+        
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -36,4 +35,3 @@
 %br
 
 
-= link_to 'New Car manufacturer', new_car_manufacturer_path, class: "btn btn-success"
