--- a/app/views/cars/index.html.haml
+++ b/app/views/cars/index.html.haml
@@ -4,7 +4,6 @@
       .grid-title.no-border
         %h4
           &nbsp;
-
         = form_tag '', :method => :get do
           .panel.panel-default
             .panel-body
@@ -59,15 +58,13 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
-        %h3
+      .grid-title.no-border
+        %h4
           Cars
+          = link_to 'Add', new_car_path, class: "btn btn-success btn-small"
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -94,4 +91,3 @@
               
 %br
 
-= link_to 'New Car', new_car_path, class: "btn btn-success"
