--- a/app/views/device_manufacturers/index.html.haml
+++ b/app/views/device_manufacturers/index.html.haml
@@ -1,23 +1,34 @@
 
-= search_form_for @q, :class => "form-inline" do |f| 
-  = f.search_field :name_cont, :placeholder => "search with name" 
-  = f.submit "Search" ,:class => "btn btn-default"
-
-%br
-
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
         %h4
-          &nbsp;
+          Search
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
       .grid-body.no-border
+        = search_form_for @q, :class => "form-inline" do |f|
+          .form-group 
+            = f.search_field :name_cont, :placeholder => "Search with name" 
+          .form-group
+            = f.submit "Search" ,:class => "btn btn-default"
+
+
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
         %h3
           Device Manufacturers
+          = link_to 'Add', new_device_manufacturer_path, class: "btn btn btn-success btn-small"
+
+        
+      .grid-body.no-border
+          
         %table.table.no-more-tables
           %thead
             %tr
@@ -36,4 +47,3 @@
 %br
 
 
-= link_to 'New Device manufacturer', new_device_manufacturer_path, class: "btn btn-success"
