--- a/app/views/device_types/index.html.haml
+++ b/app/views/device_types/index.html.haml
@@ -9,12 +9,12 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          &nbsp;
+          = link_to 'Add', new_device_type_path, class: "btn btn-success btn-small"
       .grid-body.no-border
         %h3
           Device types
@@ -36,4 +36,3 @@
 %br
 
 
-= link_to 'New Device type', new_device_type_path, class: "btn btn-success"
