--- a/app/views/features/index.html.haml
+++ b/app/views/features/index.html.haml
@@ -1,19 +1,20 @@
 .page-title
   %h3
     Listing features
+
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
-        %h3
+      .grid-title.no-border
+        %h4
           All features
+          = link_to 'Add', new_feature_path, class: "btn btn-success btn-small"
+        
+
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -32,7 +33,6 @@
                 %td= link_to 'Edit', edit_feature_path(feature)
                 %td= link_to 'Destroy', feature, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-        = link_to 'New Feature', new_feature_path, class: "btn btn-success"
 
   
 
