--- a/app/views/groups/index.html.haml
+++ b/app/views/groups/index.html.haml
@@ -1,23 +1,31 @@
-
-= search_form_for @q, :class => "form-inline" do |f| 
-  = f.search_field :name_cont, :placeholder => "Search with name" 
-  = f.submit "Search" ,:class => "btn btn-default"
-
-%br
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Search
+      .grid-body.no-border
+        = search_form_for @q, :class => "form-inline" do |f| 
+          .form-group
+            = f.search_field :name_cont, :placeholder => "Search with name" 
+          .form-group
+            = f.submit "Search" ,:class => "btn btn-default"
 
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
+      .grid-title.no-border
         %h3
           Groups
+          = link_to 'Add', new_group_path, class: "btn btn-success btn-small"
+
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -36,4 +44,3 @@
 %br
 
 
-= link_to 'New Group', new_group_path, class: "btn btn-success"
