--- a/app/views/groups/show.html.haml
+++ b/app/views/groups/show.html.haml
@@ -1,39 +1,58 @@
+.page-title
+  = link_to raw("<i class='icon-custom-left'></i>"), groups_path
+  %h3
+    %span.semi-bold= @group.name
+    Group
+
 .row
   .col-md-12
+    .row.tiles-container.tiles.white.hidden-xlg.m-b-20
+      %div
+        %div#groups_show{ :style => "width: 100%; height: 400px;"}
+        
+.row
+  .col-md-7
     .grid.simple
       .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
         %h3
-          Group
+          Alarms
       .grid-body.no-border
-        %h1= "#{@group.name}"
-
-        %h3 Cars
-
-        %table.table
-          %tr
-            %th= "Name"
-          - @group.cars.each do |car|
+        %table.table.no-more-tables
+          %thead
             %tr
-              %td= link_to car.name, car
-
-        %br
-
-        %h3 Alarms
-
-        %table.table
-          %tr
-            %th= "Name"
-            %th= "Status"
-            %th= "Last alert"
-
-          - @alarms.each do |alarm|
+              %th= "Name"
+              %th= "Status"
+              %th= "Last alert"
+          %tbody
+            
+            - @alarms.each do |alarm|
+              %tr
+                %td= alarm.name
+                %td= @group.alarm_status(alarm)
+                %td= @group.alarm_last_alert(alarm)
+  .col-md-5
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h3
+          Cars
+      .grid-body.no-border
+        %table.table.no-more-tables
+          %thead
             %tr
-              %td= alarm.name
-              %td= @group.alarm_status(alarm)
-              %td= @group.alarm_last_alert(alarm)
-        %br
+              %th Numberplate
+          %tbody
+            
+            - @group.cars.each do |car|
+              %tr
+                %td= link_to car.numberplate, car
+  
 
 
-        = link_to 'Edit', edit_group_path(@group)
-        \|
-        = link_to 'Back', groups_path
+
+
