--- a/app/views/plan_types/index.html.haml
+++ b/app/views/plan_types/index.html.haml
@@ -3,15 +3,14 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
-        %h3
+      .grid-title.no-border
+        %h4
           Plan Types
+          = link_to 'Add', new_plan_type_path, class: "btn btn-success btn-small"
+        
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -26,7 +25,7 @@
                 %td= link_to 'Edit', edit_plan_path(plan_type)
                 %td= link_to 'Destroy', plan_type, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
 
 
-= link_to 'New Plan Type', new_plan_type_path, class: "btn btn-success"
+
+
