--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -3,15 +3,13 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
-        %h3
+      .grid-title.no-border
+        %h4
           Cars
+          = link_to 'Add', new_plan_path, class: "btn btn-success btn-small"  
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -28,6 +26,3 @@
                 %td= link_to 'Edit', edit_plan_path(plan)
                 %td= link_to 'Destroy', plan, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
-
-= link_to 'New Plan', new_plan_path, class: "btn btn-success"
