--- a/app/views/regions/index.html.haml
+++ b/app/views/regions/index.html.haml
@@ -3,15 +3,13 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
-      .grid-body.no-border
-        %h3
+      .grid-title.no-border
+        %h4
           Regions
+          = link_to 'Add', new_region_path, class: "btn btn-success btn-small"
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -28,7 +26,5 @@
                 %td= link_to 'Edit', edit_region_path(region)
                 %td= link_to 'Destroy', region, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
 
 
-= link_to 'New Region', new_region_path, class: "btn btn-success"
