--- a/app/views/rules/index.html.haml
+++ b/app/views/rules/index.html.haml
@@ -3,15 +3,13 @@
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Rules
+          = link_to 'Add', new_rule_path, class: "btn btn-success btn-small"
         .grid-body.no-border
-          %h3
-            Rules
           %table.table.no-more-tables
             %thead
             %tr
@@ -30,7 +28,4 @@
               %td= link_to 'Edit', edit_rule_path(rule)
               %td= link_to 'Destroy', rule, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
 
-
-= link_to 'New Rule', new_rule_path, class: "btn btn-success"
