--- a/app/views/simcards/index.html.haml
+++ b/app/views/simcards/index.html.haml
@@ -1,42 +1,58 @@
-
-= search_form_for @q, :class => "form-inline" do |f| 
-  = f.search_field :telephone_number_cont, :placeholder => "Search with telephone number" 
-  = f.submit "Search" ,:class => "btn btn-default"
-
-%br
-
-= form_tag '', :method => :get, :class => "form-inline" do
-  .form-group
-    %b= "Teleprovider :"
-    = select_tag( :by_teleprovider, options_for_select(all_teleproviders, params[:by_teleprovider]), :include_blank => true)
-  .form-group
-    = radio_button_tag 'available', 'all' , true
-    = "All"
-  .form-group
-    = radio_button_tag 'available', 'true' , params["available"] == 'true' ? true : false
-    = "Available" 
-  .form-group
-    = radio_button_tag 'available', 'false' , params["available"] == 'false' ? true : false
-    = "Used"
-  
-
-  = submit_tag 'Filter', :class => "btn btn-default"
-
-%br
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Search
+      .grid-body.no-border
+        = search_form_for @q, :class => "form-inline" do |f| 
+          .form-group
+            = f.search_field :telephone_number_cont, :placeholder => "Search with telephone number" 
+          .form-group
+            = f.submit "Search" ,:class => "btn btn-default"
 
 .row
   .col-md-12
     .grid.simple
       .grid-title.no-border
-        %h4
-          &nbsp;
         .tools
           %a.collapse{href: "javascript:;"}
-          %a.config{"data-toggle" => "modal", href: "#grid-config"}
-          %a.reload{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Filter
       .grid-body.no-border
-        %h3
+        = form_tag '', :method => :get do
+          .form-group
+            Teleprovider
+          .form-group
+            = select_tag( :by_teleprovider, options_for_select(all_teleproviders, params[:by_teleprovider]), :include_blank => true)     
+          .form-group
+            = radio_button_tag 'available', 'all' , true
+            = "All"
+          .form-group
+            = radio_button_tag 'available', 'true' , params["available"] == 'true' ? true : false
+            = "Available" 
+          .form-group
+            = radio_button_tag 'available', 'false' , params["available"] == 'false' ? true : false
+            = "Used"
+          
+          .form-group
+            = submit_tag 'Filter', :class => "btn btn-default"
+
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
           Simcards
+          = link_to 'Add', new_simcard_path, class: "btn btn-success btn-small"
+      .grid-body.no-border
         %table.table.no-more-tables
           %thead
             %tr
@@ -61,6 +77,4 @@
                 %td= link_to 'Edit', edit_simcard_path(simcard)
                 %td= link_to 'Destroy', simcard, :method => :delete, :data => { :confirm => 'Are you sure?' }
 
-%br
 
-= link_to 'New Simcard', new_simcard_path, class: "btn btn-success"
