--- a/app/views/car_models/index.html.haml
+++ b/app/views/car_models/index.html.haml
@@ -1,13 +1,36 @@
+.row
+  .col-md-6
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Filters
+      .grid-body.no-border
+        = form_tag '', :method => :get do
+          .form-group
+            = "Car Model"
+          .form-group
+            = select_tag( :by_car_manufacturer, options_for_select(all_car_manufacturers, params[:by_car_manufacturer]), :include_blank => true)
+          .form-group
+            = submit_tag 'Filter', :class => "btn btn-primary"
+  .col-md-6
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Search
+      .grid-body.no-border
+        = search_form_for @q, :class => "form-inline" do |f| 
+          .form-group
+            = f.search_field :name_cont, :placeholder => "Search with name" 
+          .form-group
+            = f.submit "Search" ,:class => "btn btn-default"
 
-= search_form_for @q, :class => "form-inline" do |f| 
-  = f.search_field :name_cont, :placeholder => "search with name" 
-  = f.submit "Search" ,:class => "btn btn-default"
 
-
-= form_tag '', :method => :get do
-  = "Car Model"
-  = select_tag( :by_car_manufacturer, options_for_select(all_car_manufacturers, params[:by_car_manufacturer]), :include_blank => true)
-  = submit_tag 'Filter', :class => "btn btn-primary"
 
 %br
 
