--- a/app/views/car_types/index.html.haml
+++ b/app/views/car_types/index.html.haml
@@ -1,11 +1,21 @@
 
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        .tools
+          %a.collapse{href: "javascript:;"}
+      .grid-title.no-border
+        %h4
+          Search   
+      .grid-body.no-border
 
+        = search_form_for @q, :class => "form-inline" do |f| 
+          .form-group
+          = f.search_field :name_cont, :placeholder => "Search with name" 
+          .form-group
+          = f.submit "Search" ,:class => "btn btn-default"
 
-= search_form_for @q, :class => "form-inline" do |f| 
-  = f.search_field :name_cont, :placeholder => "search with name" 
-  = f.submit "Search" ,:class => "btn btn-default"
-
-%br
 
 .row
   .col-md-12
