the company settings page shows the free plan by default if there is no subscriptions yet

--- a/app/views/plans/index.html.haml
+++ b/app/views/plans/index.html.haml
@@ -10,7 +10,7 @@
           %a.collapse{href: "javascript:;"}
       .grid-title.no-border
         %h4
-          Cars
+          Plans
           = link_to 'Add', new_plan_path, class: "btn btn-success btn-small"  
       .grid-body.no-border
         %table.table.no-more-tables
