--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -8,31 +8,7 @@ $(document).ready ->
 
     if (typeof gon != "undefined") && gon.resource == "cars" 
 
-        class CustomMarkerBuilder extends Gmaps.Google.Builders.Marker
-          create_marker: ->
-            options = _.extend @marker_options(), @rich_marker_options()
-            @serviceObject = new RichMarker options
-
-          rich_marker_options: ->
-            marker = document.createElement("div")
-            marker.setAttribute('class', 'custom_marker')
-            marker.innerHTML = this.args.custom_marker
-            _.extend(@marker_options(), { flat: true })
-            { content: marker }
-
-          create_infowindow: ->
-            return null unless _.isString @args.custom_infowindow
-
-            boxText = document.createElement("div")
-            boxText.setAttribute("class", 'custom_infowindow')
-            boxText.innerHTML = @args.custom_infowindow
-            @infowindow = new InfoBox(@infobox(boxText))
-
-          infobox: (boxText)->
-            content: boxText
-            pixelOffset: new google.maps.Size(30,-20)
-            boxStyle:
-              width: "130px"
+        
 
 
         if gon.map_id == "cars_show"
@@ -69,32 +45,61 @@ $(document).ready ->
             basicExampleEl = document.getElementById('filter_by_date');
             datepair = new Datepair(basicExampleEl);
 
-            handler = Gmaps.build("Google", builders: { Marker: CustomMarkerBuilder } )
+            calcRoute = ->
+                origin = new google.maps.LatLng(37.331665, -122.031294)
+                destination = new google.maps.LatLng(37.330224, -122.033772)
+                waypts = []
+                waypts.push
+                    location: new google.maps.LatLng(37.331367, -122.03241)
+                    stopover: false
+
+                request =
+                    origin: origin
+                    destination: destination
+                    waypoints: waypts
+                    travelMode: google.maps.TravelMode.DRIVING
+
+                directionsService.route request, (response, status) ->
+                directionsDisplay.setDirections response  if status is google.maps.DirectionsStatus.OK
+                return
+
+                return
+                directionsDisplay = new google.maps.DirectionsRenderer()
+                directionsService = new google.maps.DirectionsService()
+
+            calcRoute()
+            handler = Gmaps.build("Google")
             handler.buildMap { internal: id: gon.map_id }, ->
-                #markers = handler.addMarkers(gon.data)
-
-                for one_marker, i in gon.data
-
-                    if i == 0 
-                        pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
-                    else if gon.data.length - 1 == i
-                        pin = "<img width='36px' height='36px' src='<%= image_path('green_pin.png') %>'>"
-                    else
-                        pin = "<img width='36px' height='36px' src='<%= image_path('yellow_pin.png') %>'>"
-
-                    content = "<div>" + one_marker.infowindow + "</div>"
-                    
-                    marker = handler.addMarker
-                        lat:               one_marker.lat
-                        lng:               one_marker.lng
-                        custom_marker:     pin
-                        custom_infowindow: content
-                    handler.bounds.extendWith(marker)
-                    
-                handler.fitMapToBounds()
-                handler.getMap().setZoom(11)
-
+                directionsDisplay.setMap handler.getMap()
+            
         else 
+
+            class CustomMarkerBuilder extends Gmaps.Google.Builders.Marker
+                create_marker: ->
+                    options = _.extend @marker_options(), @rich_marker_options()
+                    @serviceObject = new RichMarker options
+
+                rich_marker_options: ->
+                    marker = document.createElement("div")
+                    marker.setAttribute('class', 'custom_marker')
+                    marker.innerHTML = this.args.custom_marker
+                    _.extend(@marker_options(), { flat: true })
+                    { content: marker }
+
+                create_infowindow: ->
+                    return null unless _.isString @args.custom_infowindow
+
+                    boxText = document.createElement("div")
+                    boxText.setAttribute("class", 'custom_infowindow')
+                    boxText.innerHTML = @args.custom_infowindow
+                    @infowindow = new InfoBox(@infobox(boxText))
+
+                infobox: (boxText)->
+                    content: boxText
+                    pixelOffset: new google.maps.Size(30,-20)
+                    boxStyle:
+                        width: "130px"
+
             handler = Gmaps.build("Google", builders: { Marker: CustomMarkerBuilder } )
             handler.buildMap { internal: id: gon.map_id }, ->
                 #markers = handler.addMarkers(gon.data)
