--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -137,6 +137,7 @@
 						</a>
 						<ul class="dropdown-menu pull-right" role="menu" aria-labelledby="user-options">
 							<% if current_user.company %> 
+							<li><%= link_to "User settings", user_path(current_user) %></li>
 							<li><%= link_to "Company settings", company_path(current_user.company.id) %></li>
 							<% end %>
 							<li class="divider"></li>                
