--- a/app/views/cars/show.html.haml
+++ b/app/views/cars/show.html.haml
@@ -38,10 +38,11 @@
         .tools
           %a.collapse{href: "javascript:;"}
       .grid-title.no-border
-        %h3
+        %h4
           Switch map viewing mode
       .grid-body.no-border
-        = button_tag "Switch", :class => "switch_map_mode btn"
+        .form-group
+          = button_tag "Switch", :class => "switch_map_mode btn"
 
 
 .row
