--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -26,9 +26,9 @@ $(document).ready ->
 
         infobox: (boxText)->
             content: boxText
-            pixelOffset: new google.maps.Size(30,-20)
+            pixelOffset: new google.maps.Size(-60,-60)
             boxStyle:
-                width: "130px"
+                width: "150px"
 
     switch_to_pins = ->
         window.current_mode = "pins"
@@ -169,8 +169,15 @@ $(document).ready ->
 
                 for one_marker, i in gon.data
 
+                    infos = one_marker.infowindow.split("/");
+
+                    if infos[1] == ""
+                        infos[1] = "No Driver"
+
                     pin = "<img width='36px' height='36px' src='<%= image_path('red_pin.png') %>'>"
-                    content = "<div style='height:100%;'>" + one_marker.infowindow + "</div>"
+                    
+                    content = "<div class='map-tooltip' ><p>#"+ infos[0] + "</p><p>" + infos[1] + "</p><p>" + infos[2] + "</p></div>" 
+
                     
                     marker = handler.addMarker
                         lat:               one_marker.lat
