--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -193,7 +193,7 @@
 			<li class="">
 				<a href="<%= cars_path %>" >
 					<%= fa_icon "truck" %>
-					<span class="title">Cars</span>
+					<span class="title">Vehicles</span>
 				</a>
 			</li>
 			<li class="">
