--- a/app/views/cars/_form.html.haml
+++ b/app/views/cars/_form.html.haml
@@ -54,7 +54,7 @@
 
   .form-group
     = f.label :group, class: "form-label"
-    = f.collection_select(:group_id, Group.all, :id, :name, {}, class: "form-control" )
+    = f.collection_select(:group_id, Group.all, :id, :name, { :include_blank => "Select group" }, class: "form-control" )
 
   %h3 Alarms
   .form-group
