added new model to keep track when rule did trigger alarm

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -221,6 +221,12 @@
 				</a>
 			</li>
 			<li class="">
+				<a href="<%= regions_path %>">
+					<%= fa_icon "bullhorn" %>
+					<span class="title">Regions</span>
+				</a>
+			</li>
+			<li class="">
 				<a href="<%= alarms_path %>">
 					<%= fa_icon "bullhorn" %>
 					<span class="title">Alarms</span>
