bug fixes + ability to select an all day work schedule

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -222,8 +222,14 @@
 			</li>
 			<li class="">
 				<a href="<%= regions_path %>">
-					<%= fa_icon "bullhorn" %>
+					<%= fa_icon "circle" %>
 					<span class="title">Regions</span>
+				</a>
+			</li>
+			<li class="">
+				<a href="<%= work_schedules_path %>">
+					<%= fa_icon "calendar" %>
+					<span class="title">Work Schedules</span>
 				</a>
 			</li>
 			<li class="">
