--- a/app/views/devices/show.html.haml
+++ b/app/views/devices/show.html.haml
@@ -19,10 +19,10 @@
           = link_to @device.try(:device_type).try(:name), @device.try(:device_type)
         .form-group
           %b Car:
-          = link_to @device.try(:car).try(:numberplate), @device.try(:car) 
+          = link_to @device.try(:car).try(:numberplate).to_s , @device.car
         .form-group
           %b Simcard:
-          = link_to @device.try(:simcard).try(:telephone_number), @device.try(:simcard)
+          = link_to @device.try(:simcard).try(:telephone_number).to_s , @device.try(:simcard)
 
         = link_to 'Edit', edit_device_path(@device)
         \|
