--- a/app/views/work_schedules/new.html.haml
+++ b/app/views/work_schedules/new.html.haml
@@ -1,3 +1,8 @@
+
+.field
+	= label_tag :name
+	= text_field_tag :name
+
 #calendar
 %br/
 %input#submit_calendar{:type => "button", :value => "Submit"}/
