bug fixes, refactored regions

--- a/app/views/regions/_form.html.haml
+++ b/app/views/regions/_form.html.haml
@@ -1,9 +1,9 @@
 
-.field
+.form-group
 	= label_tag :name
 	= text_field_tag :name
-
+%br/
 #map_canvas
 
-.actions
+.form-group
 	%input{ :type=>"button", :value => "Submit", :id => "submit_polygon" , :required => true}
