--- a/app/views/regions/new.html.haml
+++ b/app/views/regions/new.html.haml
@@ -1,5 +1,21 @@
-%h1 New region
-
-= render 'form'
-
-= link_to 'Back', regions_path
+.page-title
+  %h3
+    New Region
+.row
+  .col-md-12
+    .grid.simple
+      .grid-title.no-border
+        %h4
+          Region 
+          %span.semi-bold details
+        .tools
+          %a.collapse{href: "javascript:;"}
+          %a.config{"data-toggle" => "modal", href: "#grid-config"}
+          %a.reload{href: "javascript:;"}
+          %a.remove{href: "javascript:;"}
+      .grid-body.no-border
+        %br/
+        .row
+          .col-md-8.col-sm-8.col-xs-8 
+            = render 'form'
+            = link_to 'Back', regions_path
