--- a/app/views/alarm_notifications/index.html.haml
+++ b/app/views/alarm_notifications/index.html.haml
@@ -18,8 +18,7 @@
               %tr
                 %td= alarm_notification.car
                 %td= alarm_notification.alarm
-                %td= alarm_notification.create_at
-                %td= link_to 'Destroy', car_manufacturer, :method => :delete, :data => { :confirm => 'Are you sure?' }
+                %td= alarm_notification.created_at
 %br
 
 
