--- a/app/assets/javascripts/cars.js.coffee.erb
+++ b/app/assets/javascripts/cars.js.coffee.erb
@@ -34,7 +34,7 @@ $(document).ready ->
         window.current_mode = "pins"
 
         handler = Gmaps.build("Google", builders: { Marker: CustomMarkerBuilder } )
-        handler.buildMap { internal: id: gon.map_id }, ->
+        handler.buildMap { internal: id: gon.map_id}, ->
 
             for one_marker, i in gon.data
 
@@ -57,6 +57,8 @@ $(document).ready ->
             handler.fitMapToBounds()
             handler.getMap().setZoom(11)
 
+            window.handler = handler
+
     switch_to_directions = ->
 
         window.current_mode = "directions"
@@ -66,10 +68,11 @@ $(document).ready ->
         directionsService = new google.maps.DirectionsService()
 
         handler = Gmaps.build("Google")
-        handler.buildMap { internal: id: gon.map_id }, ->
+
+        handler.buildMap { provider: { scrollwheel: false }, internal: { id: gon.map_id }}, ->
             directionsDisplay.setMap handler.getMap()
 
-        window.data = gon.data
+        window.handler = handler
     
         array_length = gon.data.length
 
